--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -15,20 +15,37 @@ jobs:
       REMOTE_DIR: "."
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938  # v4.2.0
 
-      - name: Set up environment variables
+      - name: Set Environment Variables
         run: |
-          echo "REPO_ROOT=$(git rev-parse --show-toplevel)" >> $GITHUB_ENV
-          echo "LOCAL_DIR=$REPO_ROOT/huggingface/spaces/openai-tts" >> $GITHUB_ENV
+          echo "REPO_ROOT=${{ github.workspace }}" >> $GITHUB_ENV
+          echo "LOCAL_DIR=${{ github.workspace }}/huggingface/spaces/openai-tts" >> $GITHUB_ENV
+
+      - name: Debug environment variables
+        run: |
+          echo "REPO_ROOT: ${{ env.REPO_ROOT }}"
+          echo "LOCAL_DIR: ${{ env.LOCAL_DIR }}"
+          echo "Current directory: $(pwd)"
+          ls -la
+          echo "Contents of LOCAL_DIR:"
+          ls -la ${{ env.LOCAL_DIR }}
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3  # v5.2.0
         with:
           python-version: "3.11"
 
       - name: Install Hugging Face CLI
         run: pip install -U "huggingface_hub[cli,hf_transfer]"
+
+      - name: Cache Python dependencies
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9  # v4.0.2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Hugging Face Login
         run: huggingface-cli login --token "${{ secrets.HUGGINGFACE_TOKEN }}"
