--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -46,7 +46,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332  # v4.1.7
         with:
           fetch-depth: 0
 
@@ -60,16 +60,24 @@ jobs:
           echo "DVCLIVE_EVALUATE_DIR=${{ github.workspace }}/dvclive_evaluate" >> $GITHUB_ENV
           echo "METRICS_JSON=${{ github.workspace }}/reports/metrics.json" >> $GITHUB_ENV
 
-      - name: Cache Python dependencies
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+      - name: Debug environment variables
+        run: |
+          echo "REPO_ROOT: ${{ env.REPO_ROOT }}"
+          echo "REQUIREMENTS_FILE: ${{ env.REQUIREMENTS_FILE }}"
+          echo "DVC_LOCK_FILE: ${{ env.DVC_LOCK_FILE }}"
+          echo "DVC_CACHE_DIR: ${{ env.DVC_CACHE_DIR }}"
+          echo "DVCLIVE_DIR: ${{ env.DVCLIVE_DIR }}"
+          echo "DVCLIVE_EVALUATE_DIR: ${{ env.DVCLIVE_EVALUATE_DIR }}"
+          echo "METRICS_JSON: ${{ env.METRICS_JSON }}"
+          echo "Current directory: $(pwd)"
+          ls -la
+          echo "Contents of REPO_ROOT:"
+          ls -la ${{ env.REPO_ROOT }}
+          echo "Contents of DVC_CACHE_DIR (if exists):"
+          [ -d "${{ env.DVC_CACHE_DIR }}" ] && ls -la ${{ env.DVC_CACHE_DIR }} || echo "DVC_CACHE_DIR does not exist yet"
 
       - name: Set up Python
-        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
+        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3  # v5.2.0
         with:
           python-version: "3.11"
 
@@ -77,6 +85,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r $REQUIREMENTS_FILE
+
+      - name: Cache Python dependencies
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9  # v4.0.2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Configure DVC
         run: |
@@ -91,7 +107,7 @@ jobs:
           dvc remote list
 
       - name: Cache DVC cache directory
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9  # v4.0.2
         with:
           path: ${{ env.DVC_CACHE_DIR }}
           key: ${{ runner.os }}-dvc-cache-${{ hashFiles('dvc.lock') }}
@@ -104,7 +120,7 @@ jobs:
       - name: Run DVC pipeline
         run: dvc repro
 
-      - name: Push data and models to DVC remotes
+      - name: Push Data to Remote
         if: always()
         run: dvc push
 
@@ -113,18 +129,16 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
-      - name: Commit and push changes
+      - name: Push to Remote
         if: always()
         id: commit_and_push
         continue-on-error: true
         run: |
-          # Add files only if they exist
           [ -f $DVC_LOCK_FILE ] && git add $DVC_LOCK_FILE
           [ -d $DVCLIVE_DIR ] && git add $DVCLIVE_DIR
           [ -d $DVCLIVE_EVALUATE_DIR ] && git add $DVCLIVE_EVALUATE_DIR
           [ -f $METRICS_JSON ] && git add $METRICS_JSON
 
-          # Check for changes to commit
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
@@ -141,20 +155,17 @@ jobs:
           NEW_BRANCH="auto/update-dvc-artifacts-${{ github.run_id }}"
           git checkout -b $NEW_BRANCH
 
-          # Add files only if they exist
           [ -f $DVC_LOCK_FILE ] && git add $DVC_LOCK_FILE
           [ -d $DVCLIVE_DIR ] && git add $DVCLIVE_DIR
           [ -d $DVCLIVE_EVALUATE_DIR ] && git add $DVCLIVE_EVALUATE_DIR
           [ -f $METRICS_JSON ] && git add $METRICS_JSON
 
-          # Check for changes to commit
           if git diff --staged --quiet; then
-            echo "No changes to commit. Skipping PR creation."
+            echo "No changes to commit. Skipping PR."
           else
             git commit -m "Update DVC artifacts and metrics"
             git push origin $NEW_BRANCH
 
-            # Create a pull request using GitHub CLI
             gh pr create \
               --title "Update DVC artifacts and metrics" \
               --body "This PR updates the DVC artifacts and metrics." \
