--- a/.github/workflows/package-repo.yml
+++ b/.github/workflows/package-repo.yml
@@ -1,4 +1,5 @@
 name: Package Repository
+
 on:
   push:
     branches:
@@ -23,31 +24,35 @@ on:
       - "src/**"
       - "terraform/main.tf"
   workflow_dispatch:
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+
 permissions:
   contents: write
+
 env:
   REPO_NAME: aai540-group3/project
   EVENT_TYPE: create-release
+
 jobs:
   package-repo:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938  # v4.2.0
         with:
           fetch-depth: 0
 
-      - name: Set up environment variables
+      - name: Set Environment Variables
         run: |
           echo "REPO_ROOT=${{ github.workspace }}" >> $GITHUB_ENV
           echo "TEMP_DIR=${{ github.workspace }}/temp_repo" >> $GITHUB_ENV
           echo "ZIP_FILENAME=${{ github.workspace }}/Final_Project_Team_3_Deliverable_3.zip" >> $GITHUB_ENV
           echo "FILES_LIST=${{ github.workspace }}/files_to_zip.txt" >> $GITHUB_ENV
 
-      - name: Debug environment variables
+      - name: Print Environment Variables
         run: |
           echo "REPO_ROOT: ${{ env.REPO_ROOT }}"
           echo "TEMP_DIR: ${{ env.TEMP_DIR }}"
@@ -56,19 +61,27 @@ jobs:
           echo "Current directory: $(pwd)"
           ls -la
 
-      - name: Install pigz
+      - name: Install System Dependencies
         run: sudo apt-get install -y pigz
 
-      - name: Delete previous ZIP file if it exists
+      - name: Cache Apt Packages
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9  # v4.0.2
+        with:
+          path: /var/cache/apt/archives
+          key: ${{ runner.os }}-apt-${{ hashFiles('/etc/apt/sources.list') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-
+
+      - name: Delete Old Zipfile
         run: |
           if [ -f "$ZIP_FILENAME" ]; then
             rm "$ZIP_FILENAME"
-            echo "Deleted previous ZIP file"
+            echo "Deleted previous Zipfile"
           else
-            echo "No previous ZIP file found"
+            echo "No previous Zipfile found"
           fi
 
-      - name: Create file list
+      - name: Create File List
         run: |
           cat << EOF > $FILES_LIST
           .dvcignore
@@ -89,10 +102,10 @@ jobs:
           terraform/
           EOF
 
-      - name: Create temporary directory
+      - name: Create Temporary Directory
         run: mkdir -p $TEMP_DIR
 
-      - name: Copy files to temporary directory
+      - name: Copy Files to Temporary Directory
         run: |
           while IFS= read -r file; do
             if [ -d "$file" ]; then
@@ -103,15 +116,15 @@ jobs:
             fi
           done < $FILES_LIST
 
-      - name: Zip repository
+      - name: Zip Repository
         run: |
           zip -r -0 "$ZIP_FILENAME" $TEMP_DIR
           pigz -9 "$ZIP_FILENAME"
 
-      - name: Cleanup temporary directory
+      - name: Cleanup
         run: rm -rf $TEMP_DIR
 
-      - name: Get zip file size
+      - name: Get Zipfile Size
         run: |
           FILESIZE=$(du -h "$ZIP_FILENAME" | cut -f1)
           echo "FILESIZE=$FILESIZE" >> $GITHUB_ENV
@@ -121,7 +134,7 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
-      - name: Add, commit, and push zip file
+      - name: Push to Remote
         run: |
           git add $ZIP_FILENAME
           git commit -m "Size: $FILESIZE"
@@ -129,7 +142,7 @@ jobs:
           git push origin main
 
       - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@v3
+        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0  # v3.0.0
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: ${{ env.REPO_NAME }}
