--- a/.github/workflows/package-repo.yml
+++ b/.github/workflows/package-repo.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938  # v4.2.0
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
         with:
           fetch-depth: 0
 
@@ -65,7 +65,7 @@ jobs:
         run: sudo apt-get install -y pigz
 
       - name: Cache Apt Packages
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9  # v4.0.2
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: /var/cache/apt/archives
           key: ${{ runner.os }}-apt-${{ hashFiles('/etc/apt/sources.list') }}
@@ -110,11 +110,15 @@ jobs:
           while IFS= read -r file; do
             if [ -d "$file" ]; then
               mkdir -p "$TEMP_DIR/$file"
-              cp -r "$file"/* "$TEMP_DIR/$file/"
+              cp -r "$file"/* "$TEMP_DIR/$file/" 2>/dev/null || true
             else
-              cp "$file" "$TEMP_DIR/$file"
+              mkdir -p "$(dirname "$TEMP_DIR/$file")"
+              cp "$file" "$TEMP_DIR/$file" 2>/dev/null || echo "Failed to copy $file"
             fi
           done < $FILES_LIST
+
+          echo "Contents of TEMP_DIR:"
+          ls -R $TEMP_DIR
 
       - name: Zip Repository
         run: |
@@ -142,7 +146,7 @@ jobs:
           git push origin main
 
       - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0  # v3.0.0
+        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # v3.0.0
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: ${{ env.REPO_NAME }}
