--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install Hugging Face CLI
         run: pip install -U "huggingface_hub[cli,hf_transfer]"
 
-      - name: Cache Python dependencies
+      - name: Cache Python Dependencies
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: ~/.cache/pip
