--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -26,7 +26,7 @@ jobs:
       EVENT_TYPE: create-release
 
     steps:
-      - name: Check out main branch
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           ref: main
@@ -87,14 +87,14 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('scripts/**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Install Python Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r scripts/requirements.txt
+          pip install -r requirements.txt
 
       - name: Delete Old Files
         run: |
